--- a/src/app/empty/empty.html
+++ b/src/app/empty/empty.html
@@ -1,3 +1,3 @@
 <ul class="route-list">
-    <div class="no-route" [style.background-image]="'url('+image+')'">{{title}}</div>
+    <div class="no-route" [style.background-image]="'url('+image+')'"></div>
 </ul>
