--- a/src/app/empty/empty.html
+++ b/src/app/empty/empty.html
@@ -1,3 +1,5 @@
 <ul class="route-list">
-    <div class="no-route" [style.background-image]="'url('+image+')'"></div>
+    <div class="no-route" [style.background-image]="'url('+image+')'">
+        <ng-content></ng-content>
+    </div>
 </ul>
